Fix container overflow

--- a/src/components/ProductList/Filter/Filter.module.scss
+++ b/src/components/ProductList/Filter/Filter.module.scss
@@ -4,6 +4,7 @@
   display: flex;
   justify-content: space-between;
   position: relative;
+  max-width: 100%;
 
   .FilterBox {
     position: relative;
