--- a/src/index.css
+++ b/src/index.css
@@ -172,7 +172,7 @@ select {
   color: var(--clr-white);
   padding: var(--general-mini-padding);
   border-radius: 10px;
-  min-width: 170px;
+  width: 100%;
 }
 
 .FilterBtn a {
